Requests to GTOWizard are working

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ sheet_not_found.png
 /img/states/*
 /img/debug/*
 /test/cookies/*
-/config/gtowiz-headers.json
-/config/gtowiz-tokens.json
+/config/wizard-tokens.json
 /config/zenith-tokens.json
 /config/zenith-cookies.txt
 /config/zenith-login-cookies.txt
