--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,47 @@
+absl-py==1.0.0
+astunparse==1.6.3
+cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+flatbuffers==2.0
+future==0.18.2
+gast==0.5.3
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.44.0
+h5py==3.6.0
 idna==3.3
 install==1.3.5
+keras==2.8.0
+Keras-Preprocessing==1.1.2
 keyboard==0.13.5
+libclang==13.0.0
+Markdown==3.3.6
 numpy==1.21.5
+oauthlib==3.2.0
 opencv-python==4.5.5.62
+opt-einsum==3.3.0
 Pillow==9.0.1
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pynput==1.7.6
+pyparsing==3.0.7
 pywin32==303
 requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
 six==1.16.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.24.0
+termcolor==1.1.0
 tesserocr @ file:///C:/Users/SPENCER/code/rta/tesserocr-2.5.2-cp310-cp310-win_amd64.whl
+tf-estimator-nightly==2.8.0.dev2021122109
+typing_extensions==4.1.1
 urllib3==1.26.8
+Werkzeug==2.0.3
+wrapt==1.14.0
