--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ oauthlib==3.2.0
 opencv-python==4.5.5.62
 opt-einsum==3.3.0
 Pillow==9.0.1
+playsound==1.2.2
 protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
